# Sirius

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini
.devcontainer/: devcontainer.json
D3DExample/: CMakeLists.txt  README.md  imgui.ini
D3DExample/source/: main.cpp
D3DExample/source/cl/: CommandLine.cpp  CommandLine.hpp
D3DExample/source/logger/: logger.hpp
D3DExample/tests/: CMakeLists.txt
D3DExample/tests/unit/: Test.cpp
SiriusBlack/: CMakeLists.txt  README.md  config.cmake  package.cmake
SiriusBlack/source/: main.cpp
SiriusBlack/source/exception/: exception.hpp
SiriusBlack/tests/: CMakeLists.txt
SiriusWhite/: CMakeLists.txt  README.md  config.cmake  package.cmake
SiriusWhite/source/: Application.hpp  D3D12Context.cpp  D3D12Context.hpp  DataTransferObject.hpp  DescHeapAllocator.cpp  DescHeapAllocator.hpp  DeviceD3D.hpp  ObserverableModule.cpp  ObserverableModule.hpp  Storage.cpp  Storage.hpp  UserInterface.cpp  UserInterface.hpp  main.cpp
SiriusWhite/source/components/: ComboComponent.h
SiriusWhite/source/components/storage/: CustomStorage.hpp
SiriusWhite/source/components/window/: Win32Window.cpp  Win32Window.hpp  WinProcEvent.cpp  WinProcEvent.hpp  WindowTool.cpp  WindowTool.hpp
SiriusWhite/source/exception/: exception.cpp  exception.hpp
SiriusWhite/source/logger/: logger.hpp
SiriusWhite/source/net/: JsonProtocol.cpp  JsonProtocol.hpp  LocalNetwork.cpp  LocalNetwork.hpp  Net.cpp  Net.hpp  Protocol.cpp  Protocol.hpp  RemoteNetwork.cpp  RemoteNetwork.hpp
SiriusWhite/tests/: CMakeLists.txt
SiriusWhite/tests/unit/: Test.cpp
source/: Storage.hpp  main.cpp
source/exceptions/: exception.cpp  exception.hpp  net_exception.cpp
tests/: CMakeLists.txt
tests/unit/: NetExceptionTest.cpp
tools/: x64compile.sh
